irqbalance (0.56-1ubuntu4-rmk1) precise; urgency=low

  * Fix CPU topology parsing in the presence of cpufreq
  * Add interrupt classifications for i.MX6 hardware

 -- Russell King <rmk@arm.linux.org.uk>  Wed, 05 Feb 2014 17:22:03 +0000

irqbalance (0.56-1ubuntu4) precise; urgency=low

  * Apply patch from Stephen Gran to fix a SEGV on some systems.

 -- Adam Conrad <adconrad@ubuntu.com>  Fri, 03 Feb 2012 22:13:07 -0700

irqbalance (0.56-1ubuntu3) natty; urgency=low

  * Fixed debian/irqbalance.config to correctly pickup existing
    settings from /etc/default/irqbalance (LP: #705429)

 -- James Page <james.page@canonical.com>  Thu, 27 Jan 2011 15:36:50 +0000

irqbalance (0.56-1ubuntu2) natty; urgency=low

  * Build-depend on quilt.

 -- Matthias Klose <doko@ubuntu.com>  Thu, 20 Jan 2011 01:37:32 +0100

irqbalance (0.56-1ubuntu1) natty; urgency=low

  * Merge from debian unstable.  Remaining changes:
    - Update maintainer according to spec.
    - debian/rules, debian/irqbalance.dirs, debian/irqbalance.upstart:
      Add upstart support.
    - debian/control: Add libcap-ng support.
    - debian/control: Update description to give the user a bit more
      information on the package.
    - debian/irqbalance.{config,postinst}: Ask the user ift hey want
      to disable irqbalance or not. (LP: #573657)

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 10 Jan 2011 10:41:18 -0400

irqbalance (0.56-1) unstable; urgency=low

  * New upstream 
  * 01-cputree-parse.patch was dropped by redhat
  * Update debian/watch
  * Fix out-of-date-standards-version

 -- Anibal Monsalve Salazar <anibal@debian.org>  Fri, 09 Jul 2010 15:20:02 +1000

irqbalance (0.56-0ubuntu2) maverick; urgency=low

  * debian/irqbalance.{config,postinst}: Ask the user if they want to 
    disable irqbalance or not. (LP: #573657)

 -- Chuck Short <zulcss@ubuntu.com>  Wed, 08 Sep 2010 09:01:22 -0400

irqbalance (0.56-0ubuntu1) maverick; urgency=low
