@@ -13,12 +13,12 @@ config.*
 /configure
 /configure-stamp
 /debian/files
-/debian/irqbalance.debhelper.log
-/debian/irqbalance.postinst.debhelper
-/debian/irqbalance.postrm.debhelper
-/debian/irqbalance.prerm.debhelper
-/debian/irqbalance.substvars
-/debian/irqbalance/
+/debian/irqbalance-imx.debhelper.log
+/debian/irqbalance-imx.postinst.debhelper
+/debian/irqbalance-imx.postrm.debhelper
+/debian/irqbalance-imx.prerm.debhelper
+/debian/irqbalance-imx.substvars
+/debian/irqbalance-imx/
 /debian/stamp-patched
 /install-sh
 /libtool
